styles.css
html {
    margin: 0 0 0 0;
    padding: 0 0 0 0;
    background-color: rgb(24 24 24);
}

body {
    padding: 0 0 0 0;
    margin: 0 0 0 0;
    background-color: #e0e0e0;
}

header {
    margin-left: 5%;
    margin-right: 5%;
    border-bottom: 1px solid #00000054;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 5%;
    padding-bottom: 15px;
}

nav {
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

button {
    background-color: #e0e0e0;
    color: rgb(24 24 24);
    border: 1px solid rgb(24 24 24);
    width: 60px;
    font-family: 'Montserrat', sans-serif;
    font-size: .75em;
}

button:hover {
    background-color: rgb(24 24 24);
    color: #e0e0e0;
}

.button-link {
    background-color: rgb(24 24 24);
    color: #e0e0e0;
    border: 1px solid #e0e0e0;
    padding: 10px
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    line-height: 1.5em;
    padding: 10px;
    font-size: .9em;
    text-align: justify;
    margin: 0px 30px 30px 0px;
}


.button-link:hover {
    background-color: #e0e0e0;
    color: rgb(24 24 24);
}

div.button-container {
    margin-left: 30px;
    /* margin-bottom: 30px; */
    /* padding-left: 30px; */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.contact-group {
    padding-bottom: 5px;
    display: flex;
    flex-direction: column;
}

.offers-group {
    padding-bottom: 5px;
    display: flex;
    flex-direction: column;
}

.about-container {
    margin-left: 5%;
    margin-right: 5%;
    /* margin-right: 5%; */
    display: none;
    justify-content: space-between;
    align-items: stretch;
    background-color: rgb(24 24 24);
    color: #e0e0e0;
}

.bespoke-sonic-worlds-container {
    margin-left: 5%;
    margin-right: 5%;
    display: none;
    justify-content: space-between;
    align-items: stretch;
    background-color: rgb(24 24 24);
    color: #e0e0e0;
}

.music-lessons-container {
    margin-left: 5%;
    margin-right: 5%;
    display: none;
    justify-content: space-between;
    align-items: stretch;
    background-color: rgb(24 24 24);
    color: #e0e0e0;
}
.collaboration-container {
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 15px;
    padding-bottom: 15px;
    display: none;
    flex-direction: column;
    border-top: 1px solid #0000001c;
}

.personal-container ul:not(.playlist),
.collaboration-container ul:not(.playlist) {
    margin-top: 0;
}

.personal-container {
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 15px;
    padding-bottom: 25px;
    display: none;
    flex-direction: column;
    border-top: 1px solid #0000001c;
}

.events-container {
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 15;
    padding-right: 5%;
    padding-bottom: 25;
    display: none;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-start;
    /* align-items: center; */
    border-top: 1px solid #0000001c;
}

.events-container .contact-title,
.personal-container .contact-title,
.collaboration-container .contact-title {
    margin-bottom: 15px;
}

.teaching-container {
    margin-left: 5%;
    margin-right: 5%;
    /* margin-right: 5%; */
    display: none;
    justify-content: space-between;
    align-items: stretch;
    background-color: rgb(24 24 24);
    color: #e0e0e0;
}

.contact-container {
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 15px;
    padding-right: 30px;
    padding-bottom: 17px;
    display: none;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-top: 1px solid #0000001c;
}

.offers-container {
    margin-left: 5%;
    margin-right: 5%;
    padding-top: 15px;
    padding-right: 30px;
    padding-bottom: 17px;
    display: none;
    flex-direction: row;
    justify-content: space-between;
    align-items: left;
    border-top: 1px solid #0000001c;
}

.text-section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.content-grid-container {
    margin-left: 15%;
}

#filters {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* margin-right: 20px; */
    align-items: center;
}

.filter-title {
    margin-right: 10px;
    font-size: .75em;
    color: rgb(228 107 108);

    /* font-style: italic; */
}

.contact-title {
    margin: 0px 10px 0px 0px;
    font-size: .75em;
    color: rgb(228 107 108);
    font-weight: 400;
}

.testimonial-title {
    margin-right: 10px;
    margin-bottom: 2px;
    font-size: .75em;
    color: #e0e0e0;
    font-weight: 400;
}

.testimonial-text + .testimonial-title {
    display: block;
    margin-top: 4px;
}

.social-proof-list li.offer-items {
    margin-top: 25px;
    border-left: 1px solid #e0e0e0;
    padding-left: 15px;
}

.social-proof-list li.offer-items:first-child {
    margin-top: 15px;
}

.testimonial-subtitle {
    display: block;
    font-size: .7em;
    color: #e0e0e0;
    font-weight: 300;
    margin-bottom: 6px;
}

.body-title {
    margin-right: 10px;
    font-size: .75em;
    color: rgb(228 107 108);
    font-weight: 400;
    margin: 30px 30px 15px 30px;
}

.body-title-alt {
    margin-right: 10px;
    font-size: .75em;
    color: rgb(228 107 108);
    font-weight: 400;
    margin: 0px 30px 15px 30px;
}

.text-section #about-text {
    margin-top: 15px;
}

.body-link {
    font-family: 'Chivo', sans-serif;
    color: #e0e0e0;
    border-bottom: 1px solid #e0e0e0;
    font-size: .9em;
    font-weight: 300;
    margin-left: 30px;
}
/* .body-link:hover {
    color: rgb(24 24 24);
    border-bottom: 1px solid rgb(24 24 24);
    background-color: #e0e0e0;
} */


.body-subtitle {
    margin-right: 10px;
    font-size: .75em;
    color: rgb(228 107 108);
    font-weight: 400;
    margin: 30px 30px 15px 30px;

}

.filter-item {
    margin-right: 10px;
}
/* ... */

